components/app/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kube-state-metrics-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik-internal
  labels:
    traffic-type: internal
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`kube-state-metrics.hl.ancalagon.black`)
      priority: 10
      services:
        - name: kube-state-metrics
          port: 80
          servicePort: 8080
  tls:
    certResolver: default
